[gd_scene load_steps=6 format=3 uid="uid://b6ixi7pyyyhr7"]

[ext_resource type="Texture2D" uid="uid://bh3s33gqclprw" path="res://assets/godotengine.org/icon_color.png" id="1"]
[ext_resource type="Theme" uid="uid://hwh4p5sqew6j" path="res://DarkCity/Themes/DarkCityTitle.tres" id="2"]
[ext_resource type="Theme" uid="uid://3rvh057c8luq" path="res://DarkCity/Themes/DarkCityStandard.tres" id="3"]
[ext_resource type="Script" path="res://DarkCity/StartScreen/StartScreen.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://crcnl0s5kkdqd" path="res://assets/oculus.com/Controllers.png" id="5"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("4")

[node name="Title" type="Label" parent="."]
offset_right = 1024.0
offset_bottom = 128.0
theme = ExtResource("2")
text = "Dark City"
horizontal_alignment = 1

[node name="GodotLabel" type="Label" parent="."]
offset_left = 481.0
offset_top = 128.44
offset_right = 774.0
offset_bottom = 180.44
theme = ExtResource("3")
text = "Made with Godot"

[node name="GodotIcon" type="Sprite2D" parent="."]
position = Vector2(856, 136)
scale = Vector2(0.12, 0.12)
texture = ExtResource("1")

[node name="LastTimeTitle" type="Label" parent="."]
offset_left = 647.0
offset_top = 258.0
offset_right = 833.0
offset_bottom = 310.0
theme = ExtResource("3")
text = "Last Time:"

[node name="LastTimeValue" type="Label" parent="."]
offset_left = 845.0
offset_top = 258.0
offset_right = 969.0
offset_bottom = 310.0
theme = ExtResource("3")
text = "0:00.0"

[node name="BestTimeTitle" type="Label" parent="."]
offset_left = 647.0
offset_top = 325.0
offset_right = 833.0
offset_bottom = 377.0
theme = ExtResource("3")
text = "Best Time:"

[node name="BestTimeValue" type="Label" parent="."]
offset_left = 845.0
offset_top = 325.0
offset_right = 969.0
offset_bottom = 377.0
theme = ExtResource("3")
text = "0:00.0"

[node name="StartButton" type="Button" parent="."]
offset_left = 728.0
offset_top = 405.0
offset_right = 908.0
offset_bottom = 473.0
theme = ExtResource("3")
text = "Start"

[node name="Controllers" type="Sprite2D" parent="."]
modulate = Color(0.752941, 0.752941, 0.752941, 0.752941)
position = Vector2(302, 423.25)
scale = Vector2(0.779793, 0.813225)
texture = ExtResource("5")

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
